# usd

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/prim/: __init__.py  create_prim_hierarchy.py  defining_a_prim.py  defining_sphere_prim.py  does_prim_exist.py
src/properties/: __init__.py  get_attribute_values.py  retrieve_property_of_a_prim.py  set_attribute_values.py
src/stage/: __init__.py  create_stage.py  create_stage_in_memory.py  open_and_save_stage.py  stage_root_layer.py
src/tools/: __init__.py  path_tools.py
typings/pxr/: __init__.pyi
typings/pxr/Gf/: __init__.pyi
typings/pxr/Kind/: __init__.pyi
typings/pxr/Plug/: __init__.pyi
typings/pxr/Sdf/: __init__.pyi
typings/pxr/Sdr/: __init__.pyi
typings/pxr/Tf/: __init__.pyi
typings/pxr/Trace/: __init__.pyi
typings/pxr/Ts/: __init__.pyi
typings/pxr/Usd/: __init__.pyi
typings/pxr/UsdGeom/: __init__.pyi
typings/pxr/UsdHydra/: __init__.pyi
typings/pxr/UsdUtils/: __init__.pyi  complianceChecker.pyi  constantsGroup.pyi  fixBrokenPixarSchemas.pyi  updateSchemaWithSdrNode.pyi  usdzUtils.pyi
typings/pxr/Vt/: __init__.pyi
typings/pxr/Work/: __init__.pyi
