[project]
name = "usd"
version = "0.1.0"
description = "Learning environment for Pixar USD with Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ruff>=0.15.18",
    "usd-core>=26.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
]
